--- a/.gitignore
+++ b/.gitignore
@@ -149,5 +149,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+#idea
+.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
